objects/PS_Opportunity_Product_POB_Type_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>What it Does? RevPro : Maps the Product POB Type field value to the Opportunity Product POB Type field value for PS Opportunities. Used by the Opportunity Product trigger to determine the Oppt Product&apos;s POB Type based upon the Product&apos;s POB Type (and if necessary, the Oppt&apos;s Project Type).
Downstream Impact? RevPro integration.
Which department is owner? IT, PS</description>
    <fields>
        <fullName>Opportunity_Product_POB_Type__c</fullName>
        <description>The POB Type field value on the Opportunity Product.  This is the value the mapping maps *to*.</description>
        <inlineHelpText>The POB Type field value on the Opportunity Product.  This is the value the mapping maps *to*.</inlineHelpText>
        <label>Opportunity Product POB Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Project_Type__c</fullName>
        <description>The Project Type field value on the Opportunity.  This is a value that the mapping maps *from*.</description>
        <inlineHelpText>The Project Type field value on the Opportunity.  This is a value that the mapping maps *from*.</inlineHelpText>
        <label>Opportunity Project Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_POB_Type__c</fullName>
        <description>The POB Type field value on the Product.  This is a value the mapping maps *from*.</description>
        <inlineHelpText>The POB Type field value on the Product.  This is a value the mapping maps *from*.</inlineHelpText>
        <label>Product POB Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PS Opportunity Product POB Type Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_POB_Type__c</columns>
        <columns>Opportunity_Project_Type__c</columns>
        <columns>Opportunity_Product_POB_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>